finnally was able to figure out a way to save state data after deletion. primitive for now with the save data button, will figure out a way to autosave it

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,8 @@
 body{
-  background-color: aliceblue;
+  background-color:black !important;
 }
 
-.app{
-  background-color: antiquewhite;
-  min-height: 400px;
-  width: 500px;
+.todo-title{
+  color: aliceblue;
+  
 }
